Got the /api/v1/pdustats GET and POST routes working, but GET needs to filter for GDPR.  #1341
